refactor(core): specialize inventory movements and security fixes
- Replace generic 'Movimiento' with 'Entrada', 'Salida', and 'Proveedor' entities.
- Implement automated stock reduction and reservations for sales.
- Add manual 'Salida' type for inventory write-offs (prevented if stock > 0).
- Standardize API: fix missing @Valid/@PathVariable, normalize URLs and clean dead code.
- Security: permit public access to '/error' in SecurityConfig to avoid false 401s.